objects/Opportunity_Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Apr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Revenue Schedules</relationshipLabel>
        <relationshipName>Opportunity_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Order_History__c</fullName>
        <label>Sales Order History</label>
        <referenceTo>Sales_Order_History__c</referenceTo>
        <relationshipLabel>Opportunity Revenue Schedules (Sales Order History)</relationshipLabel>
        <relationshipName>Opportunity_Revenue_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Revenue Schedule</label>
    <nameField>
        <displayFormat>REV-{0000000000}</displayFormat>
        <label>Opportunity Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>